--- a/style.css
+++ b/style.css
@@ -1,12 +1,34 @@
 header {
-    display: flex;
     background-color: hsl(260, 7%, 31%);
-    justify-content: space-between;
-    color: hsl(60, 45%, 87%);
-    padding: 10px 15px 30px 15px;
-    border-radius: 0px 0px 30px 30px;
     margin-bottom: 15px;
-    box-shadow: 0px 0px 15px 2px hsl(260, 7%, 31%);
+    box-shadow: 0px 0px 10px 2px hsl(260, 7%, 31%);
+}
+
+header > div {
+    padding: 70px 20px 20px 20px;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+nav {
+    padding-bottom: 20px;
+    width: 100%;
+    position: fixed;
+    background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(77,74,85,0.95) 30%);
+}
+
+nav div {
+    display: flex;
+    justify-content: space-between;
+    width: 700px;
+}
+
+footer {
+    background-color: hsl(260, 7%, 31%);
+    padding: 30px 20px 10px 20px;
+    margin-top: 15px;
+    box-shadow: 0px 0px 10px 2px hsl(260, 7%, 31%);
 }
 
 body {
@@ -33,10 +55,10 @@ main > section {
 
 section > section {
     background-color: hsl(260, 7%, 31%);
-    border-radius: 35px;
+    border-radius: 20px;
     padding: 20px;
     margin: 15px;
-    box-shadow: 0px 0px 15px 2px hsl(260, 7%, 31%);
+    box-shadow: 0px 0px 10px 2px hsl(260, 7%, 31%);
 }
 
 .activity {
@@ -73,7 +95,7 @@ section > section {
 button, .note, .avClients{
     font-weight: 600;
     padding: 10px;
-    border-radius: 25px;
+    border-radius: 20px;
     height: fit-content;
     background-color: hsl(60, 45%, 55%);
     color: hsl(260, 7%, 31%);
@@ -81,9 +103,7 @@ button, .note, .avClients{
 }
 
 .note {
-    border: solid 5px hsl(260, 7%, 38%);
     color: hsl(260, 7%, 38%);
-    box-shadow: 0px 0px 15px 2px hsl(260, 7%, 38%);
 }
 
 .avClients {
@@ -91,18 +111,18 @@ button, .note, .avClients{
     color: hsl(260, 7%, 31%);
     text-align: center;
     margin: 30px;
-    box-shadow: 0px 0px 15px 2px hsl(260, 7%, 31%);
+    box-shadow: 0px 0px 10px 2px hsl(260, 7%, 31%);
 }
 
 button {
+    border-radius: 25px;
     color: hsl(260, 7%, 38%);
-    background-color: hsl(60, 45%, 55%);
+    background-color: hsl(60, 50%, 55%);
     font-family: "Quicksand", serif;
     font-size: 0.8em;
-    margin: 15px 0px;
+    margin: 10px;
     border: solid 5px hsl(260, 7%, 38%);
     transition: transform 0.2s;
-    box-shadow: 0px 0px 15px 2px hsl(260, 7%, 38%);
 }
 
 button:hover {
